--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
   <script>
     const libros = [
       {
-        portada: 'https://images-na.ssl-images-amazon.com/images/I/91bYsX41DVL.jpg',
+        portada: 'https://images-na.ssl-images-amazon.com/images/I/91bYsX41DVL.jpg', // Atomic Habits
         accionables: [
           '🧱 Crea sistemas, no metas',
           '🧠 Identidad guía el hábito',
@@ -145,19 +145,35 @@
         ]
       },
       {
-        portada: 'https://images-na.ssl-images-amazon.com/images/I/81RrUu0gJ7L.jpg',
-        accionables: [
-          '🔥 Usa el dolor como gasolina',
-          '🥶 Entrena tu mente como tu cuerpo',
-          '💪 Disciplina brutal'
-        ]
-      },
-      {
-        portada: 'https://images-na.ssl-images-amazon.com/images/I/71QKQ9mwV7L.jpg',
+        portada: 'https://images-na.ssl-images-amazon.com/images/I/71QKQ9mwV7L.jpg', // The Subtle Art
         accionables: [
           '🧘‍♂️ No todo importa',
           '💩 Aprende a ignorar con intención',
           '🧠 Sé brutalmente honesto'
+        ]
+      },
+      {
+        portada: 'https://images-na.ssl-images-amazon.com/images/I/61AZS+gaZ8L.jpg', // Deep Work
+        accionables: [
+          '🚪 Cierra puertas digitales',
+          '🕰 Bloques de tiempo profundo',
+          '🎯 Prioriza impacto, no urgencia'
+        ]
+      },
+      {
+        portada: 'https://images-na.ssl-images-amazon.com/images/I/71y5d3Es6TL.jpg', // 12 Rules for Life
+        accionables: [
+          '🧍 Camina erguido',
+          '🛏 Ordena tu casa primero',
+          '🧠 Sé preciso con tus palabras'
+        ]
+      },
+      {
+        portada: 'https://images-na.ssl-images-amazon.com/images/I/71w8Lr+opzL.jpg', // Thinking Fast and Slow
+        accionables: [
+          '⏱ Sistema 1 vs Sistema 2',
+          '🧮 No confíes en tu intuición',
+          '📊 Usa datos, no suposiciones'
         ]
       }
     ];
