--- a/public/index.html
+++ b/public/index.html
@@ -113,18 +113,18 @@
 <body>
   <div class="main">
     <div class="grid">
-      <div class="block" id="detente" style="background: linear-gradient(135deg, #FF512F, #DD2476);">
+      <div class="block" id="detente" style="background: linear-gradient(135deg, #FF6F61, #D72638);">
         <span class="label" id="detenteLabel">Detente</span>
         <div class="accionables" id="accionablesText"></div>
       </div>
-      <div class="block" id="lee" style="background: linear-gradient(135deg, #2193b0, #6dd5ed);">
+      <div class="block" id="lee" style="background: linear-gradient(135deg, #00B4DB, #8E2DE2);">
         <span class="label" id="leeLabel">Lee</span>
         <div class="book-cover" id="leeCover"></div>
       </div>
       <div class="block" id="question" style="background: linear-gradient(135deg, #FDC830, #F37335);">
         <span class="label">?</span>
       </div>
-      <div class="block" id="conecta" style="background: linear-gradient(135deg, #00C9FF, #92FE9D);">
+      <div class="block" id="conecta" style="background: linear-gradient(135deg, #00F260, #0575E6);">
         <span class="label">Conecta</span>
       </div>
     </div>
@@ -137,24 +137,44 @@
   <script>
     const libros = [
       {
-        portada: 'https://m.media-amazon.com/images/I/81wgcld4wxL._AC_UF1000,1000_QL80_.jpg',
+        portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL.jpg',
         accionables: ['🧱 Crea sistemas, no metas', '🧠 Identidad guía el hábito', '🔁 Mejora 1% diario']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L._AC_UF1000,1000_QL80_.jpg',
+        portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L.jpg',
         accionables: ['🧘‍♂️ No todo importa', '💩 Aprende a ignorar con intención', '🧠 Sé brutalmente honesto']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71g2ednj0JL._AC_UF1000,1000_QL80_.jpg',
+        portada: 'https://m.media-amazon.com/images/I/61AZS+gaZ8L.jpg',
         accionables: ['🚪 Cierra puertas digitales', '🕰 Bloques de tiempo profundo', '🎯 Prioriza impacto']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71t4GuxLCuL._AC_UF1000,1000_QL80_.jpg',
+        portada: 'https://m.media-amazon.com/images/I/71y5d3Es6TL.jpg',
         accionables: ['🧍 Camina erguido', '🛏 Ordena tu casa primero', '🧠 Sé preciso con tus palabras']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81vpsIs58WL._AC_UF1000,1000_QL80_.jpg',
+        portada: 'https://m.media-amazon.com/images/I/71w8Lr+opzL.jpg',
         accionables: ['⏱ Sistema 1 vs Sistema 2', '🧮 No confíes en tu intuición', '📊 Usa datos, no suposiciones']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/71bK3b4Y5eL.jpg',
+        accionables: ['🧘‍♂️ Vive en el presente', '🧠 Observa tu mente sin juzgar', '🌟 La iluminación es ahora']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81mL+pf5vZL.jpg',
+        accionables: ['💪 La pasión supera al talento', '🏃‍♂️ Persevera ante la adversidad', '🎯 Enfócate en metas a largo plazo']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81b6x+3uV-L.jpg',
+        accionables: ['🔍 Sé proactivo', '🎯 Comienza con un fin en mente', '🤝 Piensa en ganar/ganar']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81Zg2z5GZ-L.jpg',
+        accionables: ['❓ Encuentra tu propósito', '🧭 Comunica desde el "por qué"', '🔄 Inspira acción auténtica']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81c6z6Jz3-L.jpg',
+        accionables: ['🌱 Mentalidad de crecimiento', '💡 Aprende del fracaso', '🚀 Cree en tu mejora constante']
       }
     ];
 
