--- a/public/index.html
+++ b/public/index.html
@@ -8,32 +8,32 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       height: 100%;
-      font-family: 'Segoe UI', sans-serif;
-      background: #fff;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: #ffffff;
       color: #222;
     }
     .main {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 100vh;
-      padding: 16px;
-      gap: 16px;
+      height: 100%;
+      padding: 1.5vw;
+      gap: 1.5vw;
     }
     .grid {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      gap: 16px;
+      gap: 1.5vw;
       flex-grow: 1;
     }
     .block {
-      flex: 1 1 calc(50% - 8px);
-      max-width: calc(50% - 8px);
-      height: calc(50% - 8px);
+      flex: 1 1 calc(50% - 0.75vw);
+      max-width: calc(50% - 0.75vw);
+      height: calc(50% - 0.75vw);
       border-radius: 16px;
       font-weight: 600;
-      font-size: 1.1rem;
+      font-size: 1.12rem;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -44,7 +44,16 @@
       overflow: hidden;
       color: white;
     }
-    .block.show .label { display: none; }
+    @media (min-width: 768px) {
+      .grid {
+        flex-wrap: nowrap;
+      }
+      .block {
+        flex: 1;
+        height: 75vh;
+        max-width: 100%;
+      }
+    }
     .label {
       z-index: 1;
       position: relative;
@@ -59,6 +68,8 @@
       padding: 14px;
       border-radius: 16px;
       text-align: center;
+    }
+    .accionables {
       background: rgba(255,255,255,0.95);
       color: #222;
       font-size: 0.88rem;
@@ -74,13 +85,16 @@
     .block.show .book-cover {
       display: flex;
     }
+    .block.show .label {
+      display: none;
+    }
     .shock {
-      background: linear-gradient(to right, #fc466b, #3f5efb);
+      background: linear-gradient(to right, #FF6F61, #D72638);
       color: white;
       font-weight: bold;
       border: none;
       border-radius: 32px;
-      padding: 12px 24px;
+      padding: 10px 24px;
       margin: 0 auto;
       font-size: 0.9rem;
       cursor: pointer;
@@ -88,6 +102,7 @@
     .logo-wrapper {
       display: flex;
       justify-content: center;
+      align-items: center;
     }
     .trigguiletras {
       height: 22px;
@@ -98,18 +113,18 @@
 <body>
   <div class="main">
     <div class="grid">
-      <div class="block" id="detente" style="background: linear-gradient(135deg, #FF6F91, #FFC75F);">
+      <div class="block" id="detente" style="background: linear-gradient(135deg, #FF512F, #DD2476);">
         <span class="label" id="detenteLabel">Detente</span>
         <div class="accionables" id="accionablesText"></div>
       </div>
-      <div class="block" id="lee" style="background: linear-gradient(135deg, #845EC2, #00C9A7);">
+      <div class="block" id="lee" style="background: linear-gradient(135deg, #24C6DC, #514A9D);">
         <span class="label" id="leeLabel">Lee</span>
         <div class="book-cover" id="leeCover"></div>
       </div>
-      <div class="block" id="question" style="background: linear-gradient(135deg, #F9F871, #F9A1BC);">
+      <div class="block" id="question" style="background: linear-gradient(135deg, #F7971E, #FFD200);">
         <span class="label">?</span>
       </div>
-      <div class="block" id="conecta" style="background: linear-gradient(135deg, #2C73D2, #008E9B);">
+      <div class="block" id="conecta" style="background: linear-gradient(135deg, #00C9FF, #92FE9D);">
         <span class="label">Conecta</span>
       </div>
     </div>
@@ -123,27 +138,43 @@
     const libros = [
       {
         portada: 'https://m.media-amazon.com/images/I/91bYsX41DVL._AC_UF1000,1000_QL80_.jpg',
-        accionables: ['🧱 Crea sistemas, no metas', '🔁 Mejora 1% diario', '🧠 Sé la identidad que aspiras']
+        accionables: ['🧱 Crea sistemas, no metas', '🧠 Identidad guía el hábito', '🔁 Mejora 1% diario']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81mL+pf5vZL._AC_UF894,1000_QL80_.jpg',
-        accionables: ['💪 La pasión se entrena', '🏃‍♂️ Sé constante incluso sin ganas', '🔥 Transforma el dolor en poder']
+        portada: 'https://m.media-amazon.com/images/I/71QKQ9mwV7L._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['🧘‍♂️ No todo importa', '💩 Aprende a ignorar con intención', '🧠 Sé brutalmente honesto']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/71y5d3Es6TL._AC_UF894,1000_QL80_.jpg',
-        accionables: ['🛏 Ordena tu espacio = mente', '🔍 Di la verdad con precisión', '🧍‍♂️ Camina con propósito']
+        portada: 'https://m.media-amazon.com/images/I/61AZS+gaZ8L._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['🚪 Cierra puertas digitales', '🕰 Bloques de tiempo profundo', '🎯 Prioriza impacto']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81Zg2z5GZ-L._AC_UF894,1000_QL80_.jpg',
-        accionables: ['🔄 Empieza con el porqué', '🧭 Inspira acción auténtica', '❓ Encuentra tu propósito real']
+        portada: 'https://m.media-amazon.com/images/I/71y5d3Es6TL._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['🧍 Camina erguido', '🛏 Ordena tu casa primero', '🧠 Sé preciso con tus palabras']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81b6x+3uV-L._AC_UF894,1000_QL80_.jpg',
-        accionables: ['🤝 Gana/Gana o no hay trato', '🎯 Enfócate en lo importante', '🔍 Sé proactivo siempre']
+        portada: 'https://m.media-amazon.com/images/I/71w8Lr+opzL._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['⏱ Sistema 1 vs Sistema 2', '🧮 No confíes en tu intuición', '📊 Usa datos, no suposiciones']
       },
       {
-        portada: 'https://m.media-amazon.com/images/I/81c6z6Jz3-L._AC_UF894,1000_QL80_.jpg',
-        accionables: ['🌱 Aprende del fracaso', '🚀 Crea tu mejora continua', '💡 Actúa con mentalidad de crecimiento']
+        portada: 'https://m.media-amazon.com/images/I/71bK3b4Y5eL._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['🧘‍♂️ Vive en el presente', '🧠 Observa tu mente sin juzgar', '🌟 La iluminación es ahora']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81mL+pf5vZL._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['💪 La pasión supera al talento', '🏃‍♂️ Persevera ante la adversidad', '🎯 Metas a largo plazo']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81b6x+3uV-L._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['🔍 Sé proactivo', '🎯 Empieza con un fin en mente', '🤝 Gana/Gana siempre']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81Zg2z5GZ-L._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['❓ Propósito claro', '🧭 Comunica tu "por qué"', '🔄 Inspira con autenticidad']
+      },
+      {
+        portada: 'https://m.media-amazon.com/images/I/81c6z6Jz3-L._AC_UF1000,1000_QL80_.jpg',
+        accionables: ['🌱 Mentalidad de crecimiento', '💡 Aprende del fracaso', '🚀 Cree en tu mejora constante']
       }
     ];
 
